# mRS_predict

./: .gitignore  CNN.py  CNN_2class.py  SVM.py  XGboost.py  cnn_model.pth  pyproject.toml  read.py
