[project]
name = "neuro-latest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.13.0",
    "clean-fid>=0.1.35",
    "dropblock>=0.3.0",
    "einops>=0.8.2",
    "flask>=3.1.3",
    "matplotlib>=3.10.8",
    "nibabel>=5.4.0",
    "numpy",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.1",
    "pillow",
    "pydot-ng>=2.0.0",
    "python-dotenv>=1.2.2",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.6.0",
    "supabase>=2.28.0",
    "tensorboardx>=1.14",
    "torch>=1.6",
    "torchvision>=0.25.0",
    "torchviz>=0.0.3",
    "tqdm>=4.60.0",
    "transformers>=5.3.0",
    "xgboost>=3.3.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]
torchvision = [
    { index = "pytorch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

